--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
             <div class="project-card">
                 <img class="project-image" src="./src/images/chatbot.png" alt="chatbot"/>
                 <h3>AI Chatbot</h3>
-                <p class="subtext">I had so much fun making this chatbot for a medical billing company. It allows customers to get information about their account, make payments, or setup payment arrangements. I was able to come up with three different ways to make this including a python package, a machine learning model using Tensorflow and Keras, and AWS Lambda</p>
+                <p class="subtext">Allows customers to get information about their account, make payments, or setup payment arrangements.</p>
                 <hr/>
-                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding">View Here</a></p>
+                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding/Payment-Portal-Chatbot">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="./src/images/PaymentPortal.png" alt="PaymentPortal"/>
                 <h3>Payment Portal</h3>
-                <p class="subtext">This is an early draft of a payment portal that I made using React. I learned quite a bit about frontend development with this one. My favorite part was the credit card carousel.</p>
+                <p class="subtext">This is an early draft of a payment portal that I made using React. I learned quite a bit about frontend development with this one.</p>
                 <hr/>
-                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding">View Here</a></p>
+                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding/Payment-portal-July-11">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="./src/images/two.png" alt="budget"/>
                 <h3>Personalized Dashboard</h3>
-                <p class="subtext">I'm really enjoying this project which is just one of many ideas that I had. It allowed me to learn OAuth, practice working with databases, and loads of Rest API practice. The final version will have a profile page when you first sign up that allows you to choose 6-8 of several card options for your dashboard. It'll use that information to populate the cards in your dashboard which change either daily or with every refresh.</p>
+                <p class="subtext">This allowed me to learn OAuth, practice working with databases, and loads of Rest API practice. </p>
                 <hr/>
-                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding">View Here</a></p>
+                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding/Boardz">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="./src/images/trucks.jpg" alt="food trucks"/>
