--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="hero">
         <nav>
-            <img class="logo" src="src/images/worldlogo.png" alt="logo">
+            <img class="logo" src="src/images/cloud.png" alt="logo">
             <ul>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
