added loan calculator project

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding/Boardz">View Here</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="./src/images/trucks.jpg" alt="food trucks"/>
-                <h3>Food Truck Armada</h3>
-                <p class="subtext">I've started this project, and have a lot of work left to do on it. It will manage a fleet of food trucks from menus, ingredients, food cost, sales, and employees.</p>
+                <img class="project-image" src="./src/images/Loan-calc.png" alt="food trucks"/>
+                <h3>Loan Calculator</h3>
+                <p class="subtext">This simple tool calculates loan payments and installment dates based on user input</p>
                 <hr/>
-                <p class="subtext"><a class="project-link" href="https://github.com/barnettcoding/FoodTruckArmada">View Here</p>
+                <p class="subtext"><a class="project-link" href="https://barnettcoding.github.io/Loan-Calculator">View Here</p>
             </div>
             
         </div>
